defektor/plugins/dev/ijk/HttpAbort/src/main/resources/virtual-service-http-abort.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: <svc-name>-http-abort
  namespace: <namespace>
spec:
  hosts:
    - <host>
  http:
    - fault:
        abort:
          httpStatus: <httpStatus>
          percent: <percentage>
      route:
        - destination:
            host: <host>
